make background teal

--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
 </head>
 <body>
     
+    <script>
+
+        //App
+        var app = new PIXI.Application({
+            width: 1280,
+            height: 720,
+            backgroundColor: 0x30D5C8
+        });
+
+        document.body.appendChild(app.view);
+
+
+    </script>
+
 </body>
 </html>
