--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <script>
 
-        //App
+        //The App
         var app = new PIXI.Application({
             width: 1280,
             height: 720,
@@ -20,6 +20,7 @@
 
         document.body.appendChild(app.view);
 
+        //Sprite 1
 
     </script>
 
