--- a/index.html
+++ b/index.html
@@ -23,11 +23,18 @@
         //Sprite 1 (Octopus)
         let octopus = PIXI.Sprite.from("img/octopus.png");
             octopus.x = 60;
-            octopus.y = 300;
-            octopus.scale.set(.5);
+            octopus.y = 250;
+            octopus.scale.set(.6);
 
         app.stage.addChild(octopus);
 
+        //Sprite 2 (Fish1)
+        let fish1 = PIXI.Sprite.from("img/fish1.png");
+            fish1.x = 840;
+            fish1.y = 50;
+            fish1.scale.set(.3);
+
+        app.stage.addChild(fish1);
 
     </script>
 
