--- a/index.html
+++ b/index.html
@@ -24,12 +24,22 @@
         let sand = PIXI.Sprite.from("img/sand.png")
         app.stage.addChild(sand);
 
+        //Ship Sprite 
+        let shipwreck = PIXI.Sprite.from("img/shipwreck.png")
+            shipwreck.y = 230;
+            shipwreck.x = 800;
+            shipwreck.scale.set(.6);
+
+        app.stage.addChild(shipwreck);
+        
         //Plant Sprite 
         let plant = PIXI.Sprite.from("img/plant.png")
             plant.y = 30;
             plant.x = 0;
 
         app.stage.addChild(plant);
+
+        
 
             //Sprite 1 (Octopus)
             let octopus = PIXI.Sprite.from("img/octopus.png");
