--- a/index.html
+++ b/index.html
@@ -58,11 +58,15 @@
 
         app.stage.addChild(octopus);
 
-        //Sprite 2 (Fish1)
+        /* Sprite 2 (Fish1)
         let fish1 = PIXI.Sprite.from("img/fish1.png");
         fish1.x = 840;
         fish1.y = 50;
         fish1.scale.set(.3);
+
+
+        app.stage.addChild(fish1); */
+
 
         //Sprite 3 (Fish2)
         let fish2 = PIXI.Sprite.from("img/fish2.png");
@@ -83,14 +87,14 @@
 
         app.stage.addChild(star);
 
-        // Container
+        /* Container
         var container1 = new PIXI.Container();
         // container1.addChild(octopus);
         container1.addChild(fish1);
         container1.y = 0;
-        container1.x = 0;
+        container1.x = 0; 
 
-        app.stage.addChild(container1);
+        app.stage.addChild(container1); */
 
         /* TEMPORARY SILENCE. TURN BACK ON
         Animation Loop
@@ -112,6 +116,7 @@
         }
         animationLoop(); 
         */
+
 
         //Button
         function makeButton() {
@@ -151,7 +156,7 @@
             });
 
 
-        // Removed Draggable Button
+        //Removed Draggable Button
         /* Draggable event listeners
             ourButton.dragging = false;
             ourButton.on("pointerdown", function (e) {
