--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
 
         app.stage.addChild(octopus);
 
-        /* Sprite 2 (Fish1)
+        // Sprite 2 (Fish1)
         let fish1 = PIXI.Sprite.from("img/fish1.png");
         fish1.x = 840;
         fish1.y = 50;
         fish1.scale.set(.3);
 
 
-        app.stage.addChild(fish1); */
 
 
         //Sprite 3 (Fish2)
@@ -87,7 +86,8 @@
 
         app.stage.addChild(star);
 
-        /* Container
+       /*
+        // Container
         var container1 = new PIXI.Container();
         // container1.addChild(octopus);
         container1.addChild(fish1);
@@ -116,6 +116,25 @@
         }
         animationLoop(); 
         */
+
+        //Draggable Fish        
+
+        function makeFish () {
+
+            let fishContainer = new PIXI.Container();
+            fishContainer.interactive = true;
+
+            let fishBody = new PIXI.Container();
+            fishBody.addChild(fish1);
+            fishBody.y = 0;
+            fishBody.x = 0;
+            app.stage.addChild(fishBody);
+
+            return fishContainer;
+
+        } 
+
+        let fishContainer = makeFish();
 
 
         //Button
